@@ -76,6 +76,7 @@ l([7, 4, 11, 2, 10, 8, 1, 6, 12, 5, 3, 9])], Vecsmall([2])], [[Vecsmall([11,
 [;]]
 [0, 1, 1, 1, 1, 1, 1, 1]
 [0, [6], [4], [4], [4], [2], [3], []]
+[1, 6, 3, 2, 3, 6, 4, 4, 4, 4, 4, 4]
 [x^12 - 24*x^10 - 10*x^9 + 216*x^8 + 180*x^7 - 844*x^6 - 1080*x^5 + 1056*x^4
  + 2200*x^3 + 720*x^2 - 240*x - 80, x^2 - 30*x + 180, x^4 - 30*x^3 + 180*x^2
  + 1080*x - 6480, x^6 - 18*x^4 + 20*x^3 + 36*x^2 - 60*x + 20, x^4 - 30*x^3 +
@@ -108,4 +109,4 @@ x^2 + x - 4
 + 4*x^2 - 8*x + 16, Mod(2*x^2, x^8 - x^6 + x^4 - x^2 + 1)], [x^4 - 5*x^2 + 5
 , Mod(-x^7 + x^5 - x^3 + 2*x, x^8 - x^6 + x^4 - x^2 + 1)], [x^8 - x^6 + x^4 
 - x^2 + 1, Mod(x, x^8 - x^6 + x^4 - x^2 + 1)]]
-Total time spent: 1588
+Total time spent: 1584
